<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.vehecon.LoginActivity" >

    <EditText
        android:id="@+id/loginUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_name"
        android:ems="10" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginUser"
        android:layout_below="@+id/loginUser"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/signin" />

</RelativeLayout>
